<?xml version="1.0"?>
<package format="2">
  <name>vision_and_object_recognition</name>
  <version>0.0.0</version>
  <description>The vision_and_object_recognition package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>

